# ImageCompressionTechniques

./: 4_4.tpc  4_4_0_2.tpv  4_4_0_4.tpv  6_3_0.tpq  6_3_0_4.tpv  6_5.spc  6_5_7.spq  6_5_7_1.spv  6_5_7_2.spv  6_5_7_3.spv  6_5_7_4.spv  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  task1  task1.cpp  task2  task2.cpp  task3  task3.cpp  task4  task4-shannon  task4-shannon.cpp  task4.cpp  task4LZW  task4LZW.cpp  task4_ACD  task4_ACD.cpp  task4_NC  task4_NC.cpp  task5  task5-1  task5-1.cpp  task5-2  task5-2.cpp  task5.cpp  task5_LZW.cpp
sampleDataP1/: 6_4.mpv
